src/main/java/antlr/EdiParser.java
// Generated from Edi.g4 by ANTLR 4.8
package antlr;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class EdiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, WORD=8, INTEGER=9, 
		ID=10, WS=11, SEPARATOR_SKIP=12;
	public static final int
		RULE_edi = 0, RULE_ediObject = 1, RULE_interchangeHeader = 2, RULE_syntax = 3, 
		RULE_id = 4, RULE_sender = 5, RULE_recipient = 6, RULE_preparation = 7, 
		RULE_controlReference = 8, RULE_priority = 9, RULE_versionNumber = 10, 
		RULE_date = 11, RULE_time = 12, RULE_code = 13, RULE_messageHeader = 14, 
		RULE_messageReference = 15, RULE_messageType = 16, RULE_name = 17, RULE_releaseNumber = 18, 
		RULE_controllingAgency = 19, RULE_requestOriginator = 20, RULE_deliverySystemParty = 21, 
		RULE_agent = 22, RULE_locationDetails = 23, RULE_countryCode = 24, RULE_currencyCode = 25, 
		RULE_languageCode = 26, RULE_accessAuthorization = 27, RULE_flightDetails = 28, 
		RULE_airline = 29, RULE_flight = 30, RULE_departure = 31, RULE_segmentStatus = 32, 
		RULE_grabTheLockFlag = 33, RULE_statusIndicator = 34, RULE_value = 35, 
		RULE_messageTrailer = 36, RULE_messageControl = 37, RULE_interchangeTrailer = 38, 
		RULE_interchangeControl = 39;
	private static String[] makeRuleNames() {
		return new String[] {
			"edi", "ediObject", "interchangeHeader", "syntax", "id", "sender", "recipient", 
			"preparation", "controlReference", "priority", "common", "date",
			"time", "code", "messageHeader", "messageReference", "messageType", "name", 
			"releaseNumber", "controllingAgency", "requestOriginator", "deliverySystemParty", 
			"agent", "locationDetails", "countryCode", "currencyCode", "languageCode", 
			"accessAuthorization", "flightDetails", "airline", "flight", "departure", 
			"segmentStatus", "grabTheLockFlag", "statusIndicator", "value", "messageTrailer", 
			"messageControl", "interchangeTrailer", "interchangeControl"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'UNB'", "'UNH'", "'ORG'", "'FDQ'", "'STX'", "'UNT'", "'UNZ'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "WORD", "INTEGER", "ID", 
			"WS", "SEPARATOR_SKIP"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Edi.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public EdiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class EdiContext extends ParserRuleContext {
		public EdiObjectContext ediObject() {
			return getRuleContext(EdiObjectContext.class,0);
		}
		public TerminalNode EOF() { return getToken(EdiParser.EOF, 0); }
		public EdiContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_edi; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EdiVisitor ) return ((EdiVisitor<? extends T>)visitor).visitEdi(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EdiContext edi() throws RecognitionException {
		EdiContext _localctx = new EdiContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_edi);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			ediObject();
			setState(81);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EdiObjectContext extends ParserRuleContext {
		public InterchangeHeaderContext interchangeHeader() {
			return getRuleContext(InterchangeHeaderContext.class,0);
		}
		public MessageHeaderContext messageHeader() {
			return getRuleContext(MessageHeaderContext.class,0);
		}
		public RequestOriginatorContext requestOriginator() {
			return getRuleContext(RequestOriginatorContext.class,0);
		}
		public FlightDetailsContext flightDetails() {
			return getRuleContext(FlightDetailsContext.class,0);
		}
		public SegmentStatusContext segmentStatus() {
			return getRuleContext(SegmentStatusContext.class,0);
		}
		public MessageTrailerContext messageTrailer() {
			return getRuleContext(MessageTrailerContext.class,0);
		}
		public InterchangeTrailerContext interchangeTrailer() {
			return getRuleContext(InterchangeTrailerContext.class,0);
		}
		public EdiObjectContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ediObject; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EdiVisitor ) return ((EdiVisitor<? extends T>)visitor).visitEdiObject(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EdiObjectContext ediObject() throws RecognitionException {
		EdiObjectContext _localctx = new EdiObjectContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_ediObject);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			interchangeHeader();
			setState(84);
			messageHeader();
			setState(85);
			requestOriginator();
			setState(86);
			flightDetails();
			setState(87);
			segmentStatus();
			setState(88);
			messageTrailer();
			setState(89);
			interchangeTrailer();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InterchangeHeaderContext extends ParserRuleContext {
		public SyntaxContext syntax() {
			return getRuleContext(SyntaxContext.class,0);
		}
		public SenderContext sender() {
			return getRuleContext(SenderContext.class,0);
		}
		public RecipientContext recipient() {
			return getRuleContext(RecipientContext.class,0);
		}
		public PreparationContext preparation() {
			return getRuleContext(PreparationContext.class,0);
		}
		public ControlReferenceContext controlReference() {
			return getRuleContext(ControlReferenceContext.class,0);
		}
		public PriorityContext priority() {
			return getRuleContext(PriorityContext.class,0);
		}
		public InterchangeHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interchangeHeader; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EdiVisitor ) return ((EdiVisitor<? extends T>)visitor).visitInterchangeHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InterchangeHeaderContext interchangeHeader() throws RecognitionException {
		InterchangeHeaderContext _localctx = new InterchangeHeaderContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_interchangeHeader);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(T__0);
			setState(92);
			syntax();
			setState(93);
			sender();
			setState(94);
			recipient();
			setState(95);
			preparation();
			setState(96);
			controlReference();
			setState(97);
			priority();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SyntaxContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public VersionNumberContext versionNumber() {
			return getRuleContext(VersionNumberContext.class,0);
		}
		public SyntaxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_syntax; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EdiVisitor ) return ((EdiVisitor<? extends T>)visitor).visitSyntax(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SyntaxContext syntax() throws RecognitionException {
		SyntaxContext _localctx = new SyntaxContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_syntax);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			id();
			setState(100);
			versionNumber();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(EdiParser.ID, 0); }
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EdiVisitor ) return ((EdiVisitor<? extends T>)visitor).visitId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_id);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SenderContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public SenderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sender; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EdiVisitor ) return ((EdiVisitor<? extends T>)visitor).visitSender(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SenderContext sender() throws RecognitionException {
		SenderContext _localctx = new SenderContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_sender);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			id();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RecipientContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public RecipientContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_recipient; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EdiVisitor ) return ((EdiVisitor<? extends T>)visitor).visitRecipient(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RecipientContext recipient() throws RecognitionException {
		RecipientContext _localctx = new RecipientContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_recipient);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			id();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PreparationContext extends ParserRuleContext {
		public DateContext date() {
			return getRuleContext(DateContext.class,0);
		}
		public TimeContext time() {
			return getRuleContext(TimeContext.class,0);
		}
		public PreparationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preparation; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EdiVisitor ) return ((EdiVisitor<? extends T>)visitor).visitPreparation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PreparationContext preparation() throws RecognitionException {
		PreparationContext _localctx = new PreparationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_preparation);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			date();
			setState(109);
			time();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ControlReferenceContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public ControlReferenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_controlReference; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EdiVisitor ) return ((EdiVisitor<? extends T>)visitor).visitControlReference(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ControlReferenceContext controlReference() throws RecognitionException {
		ControlReferenceContext _localctx = new ControlReferenceContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_controlReference);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			id();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PriorityContext extends ParserRuleContext {
		public CodeContext code() {
			return getRuleContext(CodeContext.class,0);
		}
		public PriorityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_priority; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EdiVisitor ) return ((EdiVisitor<? extends T>)visitor).visitPriority(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PriorityContext priority() throws RecognitionException {
		PriorityContext _localctx = new PriorityContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_priority);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			code();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VersionNumberContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(EdiParser.INTEGER, 0); }
		public VersionNumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_versionNumber; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EdiVisitor ) return ((EdiVisitor<? extends T>)visitor).visitVersionNumber(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VersionNumberContext versionNumber() throws RecognitionException {
		VersionNumberContext _localctx = new VersionNumberContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_versionNumber);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DateContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(EdiParser.INTEGER, 0); }
		public DateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_date; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EdiVisitor ) return ((EdiVisitor<? extends T>)visitor).visitDate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DateContext date() throws RecognitionException {
		DateContext _localctx = new DateContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_date);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TimeContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(EdiParser.INTEGER, 0); }
		public TimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_time; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EdiVisitor ) return ((EdiVisitor<? extends T>)visitor).visitTime(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TimeContext time() throws RecognitionException {
		TimeContext _localctx = new TimeContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_time);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodeContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(EdiParser.ID, 0); }
		public CodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EdiVisitor ) return ((EdiVisitor<? extends T>)visitor).visitCode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CodeContext code() throws RecognitionException {
		CodeContext _localctx = new CodeContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_code);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MessageHeaderContext extends ParserRuleContext {
		public MessageReferenceContext messageReference() {
			return getRuleContext(MessageReferenceContext.class,0);
		}
		public MessageTypeContext messageType() {
			return getRuleContext(MessageTypeContext.class,0);
		}
		public MessageHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_messageHeader; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EdiVisitor ) return ((EdiVisitor<? extends T>)visitor).visitMessageHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MessageHeaderContext messageHeader() throws RecognitionException {
		MessageHeaderContext _localctx = new MessageHeaderContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_messageHeader);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(T__1);
			setState(124);
			messageReference();
			setState(125);
			messageType();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MessageReferenceContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(EdiParser.INTEGER, 0); }
		public MessageReferenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_messageReference; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EdiVisitor ) return ((EdiVisitor<? extends T>)visitor).visitMessageReference(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MessageReferenceContext messageReference() throws RecognitionException {
		MessageReferenceContext _localctx = new MessageReferenceContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_messageReference);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MessageTypeContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public VersionNumberContext versionNumber() {
			return getRuleContext(VersionNumberContext.class,0);
		}
		public ReleaseNumberContext releaseNumber() {
			return getRuleContext(ReleaseNumberContext.class,0);
		}
		public ControllingAgencyContext controllingAgency() {
			return getRuleContext(ControllingAgencyContext.class,0);
		}
		public MessageTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_messageType; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EdiVisitor ) return ((EdiVisitor<? extends T>)visitor).visitMessageType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MessageTypeContext messageType() throws RecognitionException {
		MessageTypeContext _localctx = new MessageTypeContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_messageType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			name();
			setState(130);
			versionNumber();
			setState(131);
			releaseNumber();
			setState(132);
			controllingAgency();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(EdiParser.WORD, 0); }
		public NameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EdiVisitor ) return ((EdiVisitor<? extends T>)visitor).visitName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NameContext name() throws RecognitionException {
		NameContext _localctx = new NameContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(WORD);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReleaseNumberContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(EdiParser.INTEGER, 0); }
		public ReleaseNumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_releaseNumber; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EdiVisitor ) return ((EdiVisitor<? extends T>)visitor).visitReleaseNumber(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReleaseNumberContext releaseNumber() throws RecognitionException {
		ReleaseNumberContext _localctx = new ReleaseNumberContext(_ctx, getState());
		enterRule(_localctx, 36, RULE_releaseNumber);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ControllingAgencyContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public ControllingAgencyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_controllingAgency; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EdiVisitor ) return ((EdiVisitor<? extends T>)visitor).visitControllingAgency(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ControllingAgencyContext controllingAgency() throws RecognitionException {
		ControllingAgencyContext _localctx = new ControllingAgencyContext(_ctx, getState());
		enterRule(_localctx, 38, RULE_controllingAgency);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			id();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RequestOriginatorContext extends ParserRuleContext {
		public DeliverySystemPartyContext deliverySystemParty() {
			return getRuleContext(DeliverySystemPartyContext.class,0);
		}
		public AgentContext agent() {
			return getRuleContext(AgentContext.class,0);
		}
		public LocationDetailsContext locationDetails() {
			return getRuleContext(LocationDetailsContext.class,0);
		}
		public AccessAuthorizationContext accessAuthorization() {
			return getRuleContext(AccessAuthorizationContext.class,0);
		}
		public RequestOriginatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requestOriginator; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EdiVisitor ) return ((EdiVisitor<? extends T>)visitor).visitRequestOriginator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RequestOriginatorContext requestOriginator() throws RecognitionException {
		RequestOriginatorContext _localctx = new RequestOriginatorContext(_ctx, getState());
		enterRule(_localctx, 40, RULE_requestOriginator);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(T__2);
			setState(141);
			deliverySystemParty();
			setState(142);
			agent();
			setState(143);
			locationDetails();
			setState(144);
			accessAuthorization();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeliverySystemPartyContext extends ParserRuleContext {
		public CodeContext code() {
			return getRuleContext(CodeContext.class,0);
		}
		public DeliverySystemPartyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deliverySystemParty; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EdiVisitor ) return ((EdiVisitor<? extends T>)visitor).visitDeliverySystemParty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeliverySystemPartyContext deliverySystemParty() throws RecognitionException {
		DeliverySystemPartyContext _localctx = new DeliverySystemPartyContext(_ctx, getState());
		enterRule(_localctx, 42, RULE_deliverySystemParty);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			code();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AgentContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public AgentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_agent; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof EdiVisitor ) return ((EdiVisitor<? extends T>)visitor).visitAgent(this);
			else return visitor.visitChildren(this);
		}
	}
